--- a/slides/learning-python-as-a-programmer.html
+++ b/slides/learning-python-as-a-programmer.html
@@ -542,7 +542,7 @@ asyncio.run(coro)  # Pass coroutine between calls
               </ul>
             </li>
             <li><strong>Linting</strong>: ruff (from astral.sh)</li>
-            <li><strong>Typing</strong>: mypy for static type checking</li>
+            <li><strong>Typing</strong>: ty (from astral.sh again), replaces mypy for static type checking</li>
           </ul>
         </section>
 
