--- a/slides/learning-python-as-a-programmer.html
+++ b/slides/learning-python-as-a-programmer.html
@@ -541,8 +541,8 @@ asyncio.run(coro)  # Pass coroutine between calls
                 <li>uv: Fast modern alternative from astral.sh</li>
               </ul>
             </li>
-            <li><strong>Linting</strong>: ruff (from astral.sh)</li>
-            <li><strong>Typing</strong>: ty (from astral.sh again), replaces mypy for static type checking</li>
+            <li><strong>Typing</strong>: ty (astral.sh), replaces mypy</li>
+            <li><strong>Linting</strong>: ruff (astral.sh), replaces most other tools for styling</li>
           </ul>
         </section>
 
