--- a/slides/learning-python-as-a-programmer.html
+++ b/slides/learning-python-as-a-programmer.html
@@ -542,7 +542,7 @@ asyncio.run(coro)  # Pass coroutine between calls
               </ul>
             </li>
             <li><strong>Typing</strong>: ty (astral.sh), replaces mypy</li>
-            <li><strong>Linting</strong>: ruff (astral.sh), replaces most other tools for styling</li>
+            <li><strong>Linting</strong>: ruff (astral.sh), replaces most other tools</li>
           </ul>
         </section>
 
