--- a/slides/dev-with-ai-in-late-2025.html
+++ b/slides/dev-with-ai-in-late-2025.html
@@ -804,6 +804,7 @@ _cli_context = Context()    context from Django
         <h1 class="lang-fr">Merci</h1>
         <p class="lang-en">Questions?</p>
         <p class="lang-fr">Des questions ?</p>
+        <p><a href="https://c4ffein.github.io/presentations">c4ffein.github.io/presentations</a></p>
       </section>
 
       <!-- Links -->
