--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             function updateToggleButton() {
                 const btn = document.getElementById('theme-toggle');
                 if (!btn) return;
-                const labels = { default: '◐', light: '☀', dark: '☾' };
+                const labels = { default: '◐', light: '○', dark: '●' };
                 btn.textContent = labels[getPreference()];
             }
             if (document.readyState === 'loading') {
@@ -116,7 +116,7 @@
         <a href="https://writings.cafeine.dev">Home</a>
         <a href="https://writings.cafeine.dev/posts">Posts</a>
         <a href="https://presentations.cafeine.dev">Presentations</a>
-        <button id="theme-toggle" onclick="cycleTheme()"><script>document.write({default:'◐',light:'☀',dark:'☾'}[document.documentElement.getAttribute('data-pref')])</script></button>
+        <button id="theme-toggle" onclick="cycleTheme()"><script>document.write({default:'◐',light:'○',dark:'●'}[document.documentElement.getAttribute('data-pref')])</script></button>
     </nav>
     <h1>Presentations</h1>
     <ul>
