--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         a:hover { text-decoration: underline; }
         ul { list-style: none; padding: 0; }
         li { margin: 15px 0; }
+        code { background: var(--code-bg); padding: 0.2rem 0.4rem; border-radius: 3px; }
+        pre { background: var(--code-bg); padding: 1rem; border-radius: 5px; overflow-x: auto; }
+        pre code { background: none; padding: 0; }
+        blockquote { border-left: 3px solid var(--border); margin-left: 0; padding-left: 1rem; color: var(--text-muted); }
         nav { margin-bottom: 2rem; display: flex; align-items: center; }
         nav a { margin-right: 1rem; font-size: 1.1em; }
         #theme-toggle {
@@ -64,7 +68,6 @@
     <script>
         (function() {
             const COOKIE_NAME = 'preferred-theme';
-            const THEMES = ['default', 'light', 'dark'];
             function getCookieDomain() {
                 const host = window.location.hostname;
                 return host.endsWith('.cafeine.dev') ? ';domain=.cafeine.dev' : '';
@@ -89,15 +92,13 @@
                 updateToggleButton();
             }
             function cycleTheme() {
-                const current = getPreference();
-                const next = THEMES[(THEMES.indexOf(current) + 1) % THEMES.length];
-                setPreference(next);
+                setPreference(getEffectiveTheme() === 'light' ? 'dark' : 'light');
             }
             function updateToggleButton() {
                 const btn = document.getElementById('theme-toggle');
                 if (!btn) return;
-                const labels = { default: '◐', light: '☀︎', dark: '☾︎' };
-                btn.textContent = labels[getPreference()];
+                const labels = { light: '☀︎', dark: '☾︎' };
+                btn.textContent = labels[getEffectiveTheme()];
             }
             if (document.readyState === 'loading') {
                 document.addEventListener('DOMContentLoaded', applyTheme);
@@ -116,7 +117,7 @@
         <a href="https://writings.cafeine.dev">Home</a>
         <a href="https://writings.cafeine.dev/posts">Posts</a>
         <a href="https://presentations.cafeine.dev">Presentations</a>
-        <button id="theme-toggle" onclick="cycleTheme()"><script>document.write({default:'◐',light:'☀︎',dark:'☾︎'}[document.documentElement.getAttribute('data-pref')])</script></button>
+        <button id="theme-toggle" onclick="cycleTheme()"><script>document.write({light:'☀︎',dark:'☾︎'}[document.documentElement.getAttribute('data-theme')])</script></button>
     </nav>
     <h1>Presentations</h1>
     <ul>
