--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
         h1, h2, h3 { border-bottom: 2px solid var(--border); padding-bottom: 10px; }
         a { color: var(--link); text-decoration: none; }
         a:hover { text-decoration: underline; }
-        ul { list-style: none; padding: 0; }
-        li { margin: 15px 0; }
+        ul, ol { padding-left: 1.5rem; margin: 1rem 0; }
+        li { margin: 0.5rem 0; }
+        nav ul { list-style: none; padding: 0; margin: 0; }
+        nav li { margin: 0; }
         code { background: var(--code-bg); padding: 0.2rem 0.4rem; border-radius: 3px; }
         pre { background: var(--code-bg); padding: 1rem; border-radius: 5px; overflow-x: auto; }
         pre code { background: none; padding: 0; }
@@ -97,7 +99,7 @@
             function updateToggleButton() {
                 const btn = document.getElementById('theme-toggle');
                 if (!btn) return;
-                const labels = { light: '☀︎', dark: '☾︎' };
+                const labels = { light: '☀︎', dark: '⏾' };
                 btn.textContent = labels[getEffectiveTheme()];
             }
             if (document.readyState === 'loading') {
@@ -117,7 +119,7 @@
         <a href="https://writings.cafeine.dev">Home</a>
         <a href="https://writings.cafeine.dev/posts">Posts</a>
         <a href="https://presentations.cafeine.dev">Presentations</a>
-        <button id="theme-toggle" onclick="cycleTheme()"><script>document.write({light:'☀︎',dark:'☾︎'}[document.documentElement.getAttribute('data-theme')])</script></button>
+        <button id="theme-toggle" onclick="cycleTheme()"><script>document.write({light:'☀︎',dark:'⏾'}[document.documentElement.getAttribute('data-theme')])</script></button>
     </nav>
     <h1>Presentations</h1>
     <ul>
